# MotionEye-Custom

./: .dockerignore  .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LAUNCH.md  Makefile  NEW_FEATURES.md  README.md  SECURITY.md  UNINSTALL.md  debug_env.py  launcher.py  motioneye-lite  setup.cfg  setup.py  setup_dev.sh  test-system-readiness.sh  test_imports.py  test_integration.py  test_motioneye_lite.py
.github/workflows/: ci-linux.yml  ci-lite.yml  ci-macos.yml  ci.yml  docker-publish.yml
conf/: camera-1.conf  motion.conf.sample  motioneye.conf  motioneye.conf.sample  motioneye.db  prefs.json  prefs.json.sample
docker/: Dockerfile  Dockerfile.ci  README.md  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  motioneye-docker.conf
docs/: INSTALLATION.md  MOTIONEYE_LITE.md  PERFORMANCE_ANALYSIS.md
l10n/: traduko.sh
motioneye/: .gitignore  config.py  database.py  face_recognition_manager.py  homeassistant.py  mediafiles.py  meyectl.py  mjpgclient.py  monitor.py  motionctl.py  motioneye_init.py  prefs.py  secure_config.py  server.py  settings.py  tasks.py  update.py
motioneye.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
motioneye/controls/: powerctl.py  smbctl.py  tzctl.py  v4l2ctl.py
motioneye/extra/: opencv_processor.py
motioneye/handlers/: action.py  base.py  config.py  faces.py  main.py  movie_playback.py  relay_event.py
motioneye/locale/en/LC_MESSAGES/: motioneye.po
motioneye/static/css/: main.css  themes.css  ui.css
motioneye/static/js/: main.js
motioneye/templates/: faces.html  main.html
motioneye/utils/: __init__.py  rtmp.py
motioneye_env/: pyvenv.cfg
run/: motioneye.stdout
tests/test_handlers/: __init__.py  test_login.py
tests/test_utils/: test_mjpeg.py  test_rtmp.py
