[metadata]
name = motioneye
version = attr: motioneye.VERSION
author = Calin Crisan, Jean Michault, ...
author_email = author@example.com
description = motioneye, a multilingual web interface for motion.
url = https://github.com/M1K31/MotionEye-Custom.git
keywords = motion, video, surveillance, frontend
project_urls =
	Bug Tracker = https://github.com/M1K31/MotionEye-Custom.git
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: POSIX :: Linux
license = GNU General Public License v3.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = motioneye
include_package_data = False
python_requires = >=3.7
install_requires =
	tornado
	jinja2
	pillow
	pycurl
	babel
	boto3
	opencv-python
	face_recognition
	paho-mqtt

[options.package_data]
motioneye = extra/*, static/*.*, static/*/*, templates/*, scripts/*, controls/*, handlers/*, utils/*, locale/*/LC_MESSAGES/*.mo

[options.entry_points]
console_scripts =
	meyectl=motioneye.meyectl:main
	motioneye_init=motioneye.motioneye_init:main

[codespell]
ignore-words-list = ot
skip = *.html,*.js,*.json,*.po,*.pot

[py2app]
app = launcher.py
packages = motioneye
iconfile = logo/logo-color.svg
# py2app doesn't always pick up package_data, so we are explicit.
# These paths are relative to the location of setup.py
data_files =
    motioneye/extra
    motioneye/static
    motioneye/templates
    motioneye/locale
